--- a/Cpp/.obsidian/workspace
+++ b/Cpp/.obsidian/workspace
@@ -1,21 +1,21 @@
 {
   "main": {
-    "id": "f83bf4cda885613b",
+    "id": "0e5ff1d294203749",
     "type": "split",
     "children": [
       {
-        "id": "d480dbd9b1847fb7",
+        "id": "c529fe21956f6b07",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Inside the machine.md",
+            "file": "Standards/C++11 Language features.md",
             "mode": "source"
           }
         }
       },
       {
-        "id": "c46246c0887b7898",
+        "id": "46f4acef3370858a",
         "type": "leaf",
         "pinned": true,
         "state": {
@@ -28,15 +28,15 @@
     "direction": "vertical"
   },
   "left": {
-    "id": "3162fb22d4895538",
+    "id": "151531b5c489bf5c",
     "type": "split",
     "children": [
       {
-        "id": "767b1c26aa753a28",
+        "id": "e3435f72aa70aac8",
         "type": "tabs",
         "children": [
           {
-            "id": "69c1d70c334489ba",
+            "id": "50ba2b0d5d2c44b6",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -44,7 +44,7 @@
             }
           },
           {
-            "id": "3e46862c686af160",
+            "id": "bde8951a86cddfe9",
             "type": "leaf",
             "state": {
               "type": "search",
@@ -65,20 +65,20 @@
     "width": 300
   },
   "right": {
-    "id": "5c1ffa41b8b71698",
+    "id": "be6270e0da6a7977",
     "type": "split",
     "children": [
       {
-        "id": "3a5e7ddd11fadcb6",
+        "id": "e49f5e83a7a22f93",
         "type": "tabs",
         "children": [
           {
-            "id": "a7b913d64d7c915b",
+            "id": "370902ddd148c84b",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Inside the machine.md",
+                "file": "Standards/C++11 Language features.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -96,17 +96,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "d480dbd9b1847fb7",
+  "active": "c529fe21956f6b07",
   "lastOpenFiles": [
-    "Inside the machine.md",
-    "ALU.md",
-    "Fundamental types of  structures.md",
-    "Bus.md",
-    "Storage.md",
-    "Main memory.md",
-    "Registers.md",
-    "CPU instructions.md",
-    "Memory-access instructions.md",
-    "Arithmetic instructions.md"
+    "Standards/C++11 Language features.md",
+    "Standards/Cpp11.md",
+    "Standards/Standards.md",
+    "Contents - START HERE.md",
+    "Standards/C++11 Library features.md",
+    "C++11 Library features.md",
+    "Cpp11.md",
+    "C++11 Language features.md",
+    "Standards.md",
+    "Cpp14.md"
   ]
 }
