Cleaned the chaos in Interview Questions section of C++ vault

--- a/Cpp/.obsidian/workspace
+++ b/Cpp/.obsidian/workspace
@@ -6,11 +6,11 @@
       {
         "id": "e9688608860fce4f",
         "type": "leaf",
-        "dimension": 33.91025641025641,
+        "dimension": 50.57692307692307,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Contents - START HERE.md",
+            "file": "Interview Questions.md",
             "mode": "preview"
           }
         }
@@ -18,7 +18,7 @@
       {
         "id": "46f4acef3370858a",
         "type": "leaf",
-        "dimension": 66.08974358974359,
+        "dimension": 49.42307692307693,
         "pinned": true,
         "state": {
           "type": "graph",
@@ -80,7 +80,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Contents - START HERE.md",
+                "file": "Interview Questions.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,15 +100,15 @@
   },
   "active": "e9688608860fce4f",
   "lastOpenFiles": [
-    "Contents - START HERE.md",
-    "Tools/Tools.md",
     "Interview Questions.md",
-    "Namespaces.md",
+    "Basic features/Data types.md",
+    "Data types.md",
+    "Basic features/Basic features.md",
+    "Operator overloading.md",
     "OOP/OOP.md",
     "OOP/Classes and objects.md",
-    "Static fields.md",
-    "Pointers and references.md",
-    "Basic features/Basic features.md",
-    "Classes and objects.md"
+    "Basic features/Functions.md",
+    "Standard library/Standard library.md",
+    "Contents - START HERE.md"
   ]
 }
