--- a/Cpp/.obsidian/workspace
+++ b/Cpp/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "OOP/Polymorphism.md",
+            "file": "Standard library/Standard library.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "OOP/Polymorphism.md",
+                "file": "Standard library/Standard library.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,6 +88,8 @@
   },
   "active": "3cc2ac91193db1b1",
   "lastOpenFiles": [
+    "Standard library/Standard library.md",
+    "Basic features/Basic features.md",
     "OOP/Polymorphism.md",
     "Tools/Tools.md",
     "OOP/RAII.md",
@@ -95,8 +97,6 @@
     "OOP/OOP.md",
     "OOP/Classes and objects.md",
     "OOP/Static fields.md",
-    "OOP/Operator overloading.md",
-    "OOP/Constructors.md",
-    "OOP/Encapsulation.md"
+    "OOP/Operator overloading.md"
   ]
 }
