--- a/Cpp/.obsidian/workspace
+++ b/Cpp/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Standard library/Standard library.md",
+            "file": "Standard library/Thread support library/Thread support library.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Standard library/Standard library.md",
+                "file": "Standard library/Thread support library/Thread support library.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "3cc2ac91193db1b1",
   "lastOpenFiles": [
+    "Standard library/Thread support library/Thread support library.md",
     "Standard library/Standard library.md",
+    "Thread support library.md",
+    "Standard library/Containers library/Containers library.md",
+    "Basic features/Pointers and references.md",
+    "Interview Questions.md",
+    "Standard library/Containers library.md",
+    "Containers library.md",
     "Basic features/Basic features.md",
-    "OOP/Polymorphism.md",
-    "Tools/Tools.md",
-    "OOP/RAII.md",
-    "OOP/Inheritance.md",
-    "OOP/OOP.md",
-    "OOP/Classes and objects.md",
-    "OOP/Static fields.md",
-    "OOP/Operator overloading.md"
+    "OOP/Polymorphism.md"
   ]
 }
