--- a/Cpp/.obsidian/workspace
+++ b/Cpp/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Standard library/Thread support library/Thread support library.md",
-            "mode": "source"
+            "file": "Interview Questions.md",
+            "mode": "preview"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Standard library/Thread support library/Thread support library.md",
+                "file": "Interview Questions.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "3cc2ac91193db1b1",
   "lastOpenFiles": [
-    "Standard library/Thread support library/Thread support library.md",
-    "Standard library/Standard library.md",
-    "Thread support library.md",
-    "Standard library/Containers library/Containers library.md",
-    "Basic features/Pointers and references.md",
     "Interview Questions.md",
-    "Standard library/Containers library.md",
-    "Containers library.md",
-    "Basic features/Basic features.md",
+    "Basic features/Data types.md",
+    "OOP/Classes and objects.md",
+    "Basic features/Linkage.md",
+    "Basic features/Templates.md",
+    "Basic features/Compilation process.md",
+    "Standards/Cpp11/Lambda expressions.md",
+    "OOP/Inheritance.md",
+    "OOP/Encapsulation.md",
     "OOP/Polymorphism.md"
   ]
 }
