--- a/Cpp/.obsidian/workspace
+++ b/Cpp/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Basic features/Manual memory allocation.md",
-            "mode": "preview"
+            "file": "Coding examples.md",
+            "mode": "source"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Basic features/Manual memory allocation.md",
+                "file": "Coding examples.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "3cc2ac91193db1b1",
   "lastOpenFiles": [
-    "Basic features/Manual memory allocation.md",
-    "Interview Questions.md",
+    "Coding examples.md",
     "Contents - START HERE.md",
+    "Standard library/Standard library.md",
+    "Interview Questions.md",
+    "Basic features/Manual memory allocation.md",
     "OOP/Classes and objects.md",
     "Basic features/Undefined behavior.md",
     "Basic features/Linkage.md",
     "Basic features/Functions.md",
-    "OOP/Inheritance.md",
-    "OOP/Polymorphism.md",
-    "OOP/OOP.md"
+    "OOP/Inheritance.md"
   ]
 }
