--- a/Algorithms and Data Structures/.obsidian/workspace
+++ b/Algorithms and Data Structures/.obsidian/workspace
@@ -1,42 +1,32 @@
 {
   "main": {
-    "id": "5671c8c6f623c8c5",
+    "id": "7dce97cd676534b5",
     "type": "split",
     "children": [
       {
-        "id": "f98c2e3339286122",
+        "id": "995aeb7eb4b32d26",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Pragmatic Programmer.md",
+            "file": "Common problems.md",
             "mode": "source"
           }
-        }
-      },
-      {
-        "id": "049fd340a78ccebf",
-        "type": "leaf",
-        "pinned": true,
-        "state": {
-          "type": "graph",
-          "state": {},
-          "pinned": true
         }
       }
     ],
     "direction": "vertical"
   },
   "left": {
-    "id": "ccc4d9d79f793a5f",
+    "id": "df295b8e3a1a5035",
     "type": "split",
     "children": [
       {
-        "id": "e98f92918532cb03",
+        "id": "7c7455b169d3faf1",
         "type": "tabs",
         "children": [
           {
-            "id": "22047c2a8ee98b0d",
+            "id": "171a076b262f63d8",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -44,12 +34,12 @@
             }
           },
           {
-            "id": "e7776044369bd74e",
+            "id": "b62e6dd7151c9b85",
             "type": "leaf",
             "state": {
               "type": "search",
               "state": {
-                "query": "tag:#PragmaticPhilosophy",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -62,23 +52,23 @@
       }
     ],
     "direction": "horizontal",
-    "width": 388
+    "width": 300
   },
   "right": {
-    "id": "d4dc5085f888da43",
+    "id": "d33ccc0d3c42b8a9",
     "type": "split",
     "children": [
       {
-        "id": "4ee392142df749b0",
+        "id": "f625752028ea5bed",
         "type": "tabs",
         "children": [
           {
-            "id": "380afbe418b43d3d",
+            "id": "c1499a2adffe2603",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Pragmatic Programmer.md",
+                "file": "Common problems.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -96,17 +86,12 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "f98c2e3339286122",
+  "active": "995aeb7eb4b32d26",
   "lastOpenFiles": [
-    "Pragmatic Programmer.md",
-    "Basic Tools/Basic Tools.md",
-    "Basic Tools/Keep knowledge in plain text.md",
-    "Basic Tools/Use the power of Command Shells.md",
-    "Basic Tools/Use single editor well.md",
-    "Pragmatic Approach/Pragmatic Approach.md",
-    "Pragmatic Philosophy/Pragmatic Phillosophy.md",
-    "Pragmatic Philosophy/Make quality a requirement issue.md",
-    "Pragmatic Approach/Eliminate effects between unrelated things.md",
-    "Use single editor well.md"
+    "Common problems.md",
+    "Content.md",
+    "Most important concepts.md",
+    "Algorithms.md",
+    "Untitled.md"
   ]
 }
