--- a/Python/Python/.obsidian/workspace
+++ b/Python/Python/.obsidian/workspace
@@ -1,15 +1,15 @@
 {
   "main": {
-    "id": "7dce97cd676534b5",
+    "id": "182723ef18a7b37e",
     "type": "split",
     "children": [
       {
-        "id": "995aeb7eb4b32d26",
+        "id": "9d8233305560373e",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Most important concepts.md",
+            "file": "OOP in python.md",
             "mode": "source"
           }
         }
@@ -18,15 +18,15 @@
     "direction": "vertical"
   },
   "left": {
-    "id": "df295b8e3a1a5035",
+    "id": "6e7e24df9d509934",
     "type": "split",
     "children": [
       {
-        "id": "7c7455b169d3faf1",
+        "id": "294d11690afe3f26",
         "type": "tabs",
         "children": [
           {
-            "id": "171a076b262f63d8",
+            "id": "112330adf17f120e",
             "type": "leaf",
             "state": {
               "type": "file-explorer",
@@ -34,7 +34,7 @@
             }
           },
           {
-            "id": "b62e6dd7151c9b85",
+            "id": "c384e811b8ed2aed",
             "type": "leaf",
             "state": {
               "type": "search",
@@ -55,20 +55,20 @@
     "width": 300
   },
   "right": {
-    "id": "d33ccc0d3c42b8a9",
+    "id": "51d914f4570f5d23",
     "type": "split",
     "children": [
       {
-        "id": "f625752028ea5bed",
+        "id": "b0eb0a91dc8c0cf5",
         "type": "tabs",
         "children": [
           {
-            "id": "c1499a2adffe2603",
+            "id": "567fd1ad04bfad3d",
             "type": "leaf",
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Most important concepts.md",
+                "file": "OOP in python.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,17 +86,12 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "995aeb7eb4b32d26",
+  "active": "9d8233305560373e",
   "lastOpenFiles": [
-    "Most important concepts.md",
-    "Common problems.md",
-    "Content.md",
-    "Algorithms/Sorting.md",
-    "Algorithms/Algorithms.md",
-    "Data Structures/Data Structures.md",
-    "Big O.md",
-    "Data Structures/Linked List.md",
-    "Data Structures/Array.md",
-    "Untitled.md"
+    "OOP in python.md",
+    "General.md",
+    "Data structures.md",
+    "Control flow.md",
+    "Interview questions.md"
   ]
 }
