Flask notes updated

--- a/Python/Python/.obsidian/workspace
+++ b/Python/Python/.obsidian/workspace
@@ -89,11 +89,11 @@
   "active": "9d8233305560373e",
   "lastOpenFiles": [
     "Flask/Flask general.md",
-    "Flask/Web general.md",
-    "General.md",
     "OOP in python.md",
+    "Interview questions.md",
     "Data structures.md",
     "Control flow.md",
-    "Interview questions.md"
+    "General.md",
+    "Flask/Web general.md"
   ]
 }
