--- a/Cpp/.obsidian/workspace
+++ b/Cpp/.obsidian/workspace
@@ -4,13 +4,26 @@
     "type": "split",
     "children": [
       {
-        "id": "50438603e260a9cb",
+        "id": "3d02089bf3eea9c9",
         "type": "leaf",
-        "dimension": 58.13636363636364,
+        "pinned": true,
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Standards/Cpp11/auto.md",
+            "mode": "source"
+          },
+          "pinned": true
+        }
+      },
+      {
+        "id": "a32688c132bdcd3d",
+        "type": "leaf",
+        "pinned": true,
         "state": {
           "type": "localgraph",
           "state": {
-            "file": "Basic features/Constants.md",
+            "file": "Standards/Cpp11/auto.md",
             "options": {
               "collapse-filter": true,
               "search": "",
@@ -33,22 +46,11 @@
               "repelStrength": 10,
               "linkStrength": 1,
               "linkDistance": 250,
-              "scale": 1.4019828977761022,
+              "scale": 1,
               "close": false
             }
-          }
-        }
-      },
-      {
-        "id": "3d02089bf3eea9c9",
-        "type": "leaf",
-        "dimension": 41.86363636363637,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Basic features/Constants.md",
-            "mode": "source"
-          }
+          },
+          "pinned": true
         }
       }
     ],
@@ -105,7 +107,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Basic features/Constants.md",
+                "file": "Standards/Cpp11/auto.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -125,15 +127,15 @@
   },
   "active": "3d02089bf3eea9c9",
   "lastOpenFiles": [
-    "Basic features/Constants.md",
+    "Standards/Cpp11/auto.md",
     "Standards/Cpp11/C++11 Language features.md",
+    "Basic features/Constants.md",
     "Interview Questions.md",
     "Standards/Cpp11/C++11 Library features.md",
     "Standards/Cpp11/Lambda expressions.md",
     "Standards/Cpp14/C++ 14 Language features.md",
     "Standards/Cpp14/C++ 14 Library features.md",
     "Standards/Cpp11/Smart pointers.md",
-    "Standards/Cpp11/Rvalue references.md",
-    "Standards/Cpp11/Forwarding references.md"
+    "Standards/Cpp11/Rvalue references.md"
   ]
 }
