--- a/Cpp/.obsidian/workspace
+++ b/Cpp/.obsidian/workspace
@@ -11,7 +11,7 @@
           "type": "markdown",
           "state": {
             "file": "Standards/Cpp11/auto.md",
-            "mode": "source"
+            "mode": "preview"
           },
           "pinned": true
         }
